force-app/main/default/objects/CreditAssessment__c/CreditAssessment__c.object-meta.xml
<CustomObject>
    <label>Credit Assessment</label>
    <nameField>
        <label>Credit Assessment No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Assessment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>