force-app/main/default/objects/CreditAssessment__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <description>Company Name</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>