force-app/main/default/objects/CreditAssessment__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
                <label>AAA</label>
            </value>
            <value>
                <fullName>A2</fullName>
                <label>AA</label>
            </value>
            <value>
                <fullName>A3</fullName>
                <label>A+</label>
            </value>
            <value>
                <fullName>A4</fullName>
                <label>A</label>
            </value>
            <value>
                <fullName>A5</fullName>
                <label>A-</label>
            </value>
            <value>
                <fullName>B1</fullName>
                <label>BBB</label>
            </value>
            <value>
                <fullName>B2</fullName>
                <label>BB</label>
            </value>
            <value>
                <fullName>B3</fullName>
                <label>B+</label>
            </value>
            <value>
                <fullName>B4</fullName>
                <label>B</label>
            </value>
            <value>
                <fullName>B5</fullName>
                <label>B-</label>
            </value>
            <value>
                <fullName>C1</fullName>
                <label>CCC</label>
            </value>
            <value>
                <fullName>C2</fullName>
                <label>CC</label>
            </value>
            <value>
                <fullName>C3</fullName>
                <label>C+</label>
            </value>
            <value>
                <fullName>C4</fullName>
                <label>C</label>
            </value>
            <value>
                <fullName>C5</fullName>
                <label>C-</label>
            </value>
            <value>
                <fullName>D1</fullName>
                <label>D</label>
            </value>
            <value>
                <fullName>R1</fullName>
                <label>R</label>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>PSF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>