force-app/main/default/objects/CreditAssessment__c/fields/ShipperID__c.field-meta.xml
<CustomField>
    <fullName>ShipperID__c</fullName>
    <label>Shipper ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>