force-app/main/default/objects/CreditAssessment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SA</fullName>
                <label>Saved</label>
            </value>
            <value>
                <fullName>RA</fullName>
                <label>Request Approval</label>
            </value>
            <value>
                <fullName>AP</fullName>
                <label>Assessment in Progressing</label>
            </value>
            <value>
                <fullName>AC</fullName>
                <label>Assessment Complete</label>
            </value>
            <value>
                <fullName>DA</fullName>
                <label>Decision Approval</label>
            </value>
            <value>
                <fullName>DC</fullName>
                <label>Decision Complete</label>
            </value>
            <value>
                <fullName>NA</fullName>
                <label>Not Allowed Grade</label>
            </value>
            <value>
                <fullName>MC</fullName>
                <label>Manually Complete</label>
            </value>
            <value>
                <fullName>NC</fullName>
                <label>Nomi Confirmed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>