force-app/main/default/objects/CreditAssessment__c/fields/ValidtoDate__c.field-meta.xml
<CustomField>
    <fullName>ValidtoDate__c</fullName>
    <label>Valid to Date</label>
    <type>Date</type>
</CustomField>